chore: add .DS_Store to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ MANIFEST
 #-------------------------------------------------------------------------
 
 *.out
+
+#--------------------------------------------------------------------------
+# Mac artifacts
+#--------------------------------------------------------------------------
+.DS_Store
